avoid scrollbars in start analysis page

--- a/app/client/src/scss/myStyles.scss
+++ b/app/client/src/scss/myStyles.scss
@@ -21,7 +21,6 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 80vh;
     overflow: scroll; 
 }
 
@@ -40,7 +39,6 @@
 
 .house {
     font-size: 8rem;
-    margin: 80px 0px 0px 0px;
 }
 
 .file-input {
